--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,10 @@ img {
     padding-bottom: 40px;
 }
 
+.overlay1{
+    display: none;
+}
+
 /* contact us section */
 .section6 {
     padding-top: 35px;
